feat: add group balances